--- a/clean_template/brick.yaml
+++ b/clean_template/brick.yaml
@@ -3,7 +3,7 @@ description: Brick for creating a new app with the core of a clean arquitecture.
 
 # The following defines the brick repository url.
 # Uncomment and update the following line before publishing the brick.
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/alexsosat/flutter-bricks
 
 # The following defines the version and build number for your brick.
 # A version number is three numbers separated by dots, like 1.2.34
